# RL

./: .gitignore  CLAUDE.md  Makefile  README.md  do.md  finish.md  glimmering-greeting-yeti.md  plan.md  pyproject.toml  reason.md
configs/: base.yaml  config.yaml  debug.yaml  debug_3samples.yaml  default.yaml  experiment_gpu1.yaml  experiment_qwen3_arc.yaml  verify.yaml
confirm/: 01_check_bootstrap_quality.py  02_check_actor_sft_data.py  03_evaluate_actors_sft.py  04_evaluate_critics_sft.py  05_check_society_training.py  06_check_final_evaluation.py  README.md  _common.py
docs/: code_review_report.md  critic_review_summary.md  final_review_summary_all_teams.md  full_review_summary.md  nvml_issue.md  phase_0_plan.md  step3_nvml_fix.md  step_plan_updated.md
scripts/: 01_generate_trajectories.py  02_build_preferences.py  03_train_critic.py  04_train_actor.py  05_evaluate.py  06_full_pipeline.py  07_bootstrap_actors.py  08_classify_data.py  09_diversify_actors.py  09_train_actors_sft.py  10_diversify_critics.py  11_society_train.py  12_society_evaluate.py  12a_eval_a5.py  12b_debug_traces.py  13_society_pipeline.py  _utils.py  monitor_and_run.sh  run_society.py  setup_nvml_fix.sh  train.py
src/: __init__.py
tests/: test_actor_data_flow.py  test_actor_sft_selection.py  test_bootstrap_actors.py  test_config.py  test_critic_sft_data.py  test_critic_sft_prompts.py  test_data.py  test_deliberation.py  test_evaluation.py  test_evaluation_modes.py  test_fixes_verification.py  test_natural_deliberation_refactor.py  test_natural_protocol_cleanup.py  test_prompts.py  (+7 more)
(+96 files in other folders)
