[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acc-collab"
version = "0.1.0"
description = "ACC-Collab: Actor-Critic Approach to Multi-Agent LLM Collaboration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.0,<2.4.0",
    "transformers>=4.40.0,<4.44.0",
    "vllm>=0.4.0,<0.6.0",
    "trl>=0.9.0,<0.13.0",
    "peft>=0.11.0,<0.14.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.17.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
